# Project-Starter-Pack

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOY.md  README.md  warpdrive.toml.template
examples/01-counter/: README.md  Taskfile.yml
examples/01-counter/components/aggregator/: Cargo.toml
examples/01-counter/components/aggregator/src/: lib.rs
examples/01-counter/components/tick-circuit/: Cargo.toml
examples/01-counter/components/tick-circuit/src/: lib.rs  payload.rs
examples/01-counter/contracts/counter/: Cargo.toml
examples/01-counter/contracts/counter/src/: contract.rs  lib.rs  storage.rs  tests.rs
examples/01-counter/contracts/stellar-handler/: Cargo.toml
examples/01-counter/contracts/stellar-handler/src/: contract.rs  lib.rs  storage.rs  tests.rs
examples/01-counter/service/: build-service.sh
examples/01-counter/wit-definitions/wit/: world.wit
examples/02-event-watcher/: README.md  Taskfile.yml
examples/02-event-watcher/components/aggregator/: Cargo.toml
examples/02-event-watcher/components/event-watcher-circuit/: Cargo.toml
examples/02-event-watcher/components/event-watcher-circuit/src/: lib.rs  payload.rs  trigger.rs
examples/02-event-watcher/contracts/message-board/: Cargo.toml
examples/02-event-watcher/contracts/message-board/src/: contract.rs  lib.rs  storage.rs  tests.rs
examples/02-event-watcher/contracts/stellar-handler/: Cargo.toml
examples/02-event-watcher/contracts/stellar-handler/src/: contract.rs  lib.rs  storage.rs  tests.rs
examples/02-event-watcher/service/: build-service.sh
examples/02-event-watcher/wit-definitions/wit/: world.wit
examples/03-multi-round/: README.md  Taskfile.yml  warpdrive.toml
examples/03-multi-round/components/aggregator/: Cargo.toml
examples/03-multi-round/components/aggregator/src/: lib.rs
examples/03-multi-round/components/round1-circuit/: Cargo.toml
examples/03-multi-round/components/round1-circuit/src/: lib.rs  payload.rs
examples/03-multi-round/components/round2-circuit/: Cargo.toml
examples/03-multi-round/components/round2-circuit/src/: lib.rs  payload.rs  trigger.rs
examples/03-multi-round/contracts/composer/: Cargo.toml
examples/03-multi-round/contracts/composer/src/: contract.rs  lib.rs  storage.rs  tests.rs
examples/03-multi-round/service/: build-service.sh
examples/03-multi-round/wit-definitions/wit/: world.wit
scripts/: bootstrap-keys.sh  new-project.sh  op-env.sh
