[package]
name = "event-watcher-circuit"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# anyhow         — ergonomic error context inside `run_inner`; the WIT export
#                  signature returns `Result<_, String>` so we flatten with
#                  `e.to_string()` at the boundary.
# base64         — Soroban event topic_segments + value arrive as
#                  standard-base64 ScVal envelopes; decode with the same
#                  engine hodlers-app uses so binary identity holds.
# stellar-xdr    — hand-build the `ScVal::Map([("msg", String), ("msg_id",
#                  U64)])` payload the Soroban handler decodes via
#                  `RecordPayload::from_xdr`, and parse incoming topic /
#                  value ScVals on the way in. Same version + feature set
#                  as tick-circuit / hodlers-app / oracle-demo so the wire
#                  bytes match across the fleet.
# wit-bindgen    — generates the `circuit-world` glue from
#                  `../../wit-definitions/wit`.
anyhow = "1.0"
base64 = "0.22"
stellar-xdr = { version = "26.0.0", features = ["serde", "serde_json", "base64"] }
wit-bindgen = "0.53.1"

[package.metadata.component]
package = "starter-pack:event-watcher-circuit"

[profile.release]
# `opt-level = "s"` + LTO trims ~20% off the wasm; warpdrive enforces a
# per-component fuel budget so smaller modules also start faster.
opt-level = "s"
lto = true
